vlib/v/checker/tests/assign_expr_type_err_a.vv
fn main() {
	mut foo := 0.5
	foo <<= 1
	_ = foo
}
